# CubicSpline

./: CMakeLists.txt  README.md  README.txt  build_and_test.sh
example/: CMakeLists.txt  demo.cc
include/: cubic_spline.h
scripts/: show.py  xy.csv  xy_interpolation.csv
src/: CMakeLists.txt  cubic_spline.cc
