cmake_minimum_required(VERSION 3.12)
project(cubic_spline VERSION 1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set (CMAKE_CXX_FLAGS                     "${CMAKE_CXX_FLAGS} ${COMPILER_FLAGS}")
# set (CMAKE_CXX_FLAGS_RELWITHDEBINFO      "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -O2 ${DEBUG_INFO_FLAGS} ${CMAKE_CXX_FLAGS_ADD}")
# set (CMAKE_CXX_FLAGS_DEBUG               "${CMAKE_CXX_FLAGS_DEBUG} -O0 ${DEBUG_INFO_FLAGS} -fno-inline ${CMAKE_CXX_FLAGS_ADD}")
# set (CMAKE_CXX_FLAGS_RELEASE             "${CMAKE_CXX_FLAGS_RELEASE} -O2 ${DEBUG_INFO_FLAGS} -DNDEBUG ${CMAKE_CXX_FLAGS_ADD}")



add_subdirectory("third_party/eigen" EXCLUDE_FROM_ALL) 

# ===== unified output directory =====
if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
set(BUNDLE_DIR "${CMAKE_BINARY_DIR}/bundle")


set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${BUNDLE_DIR}")   # executables
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${BUNDLE_DIR}")   # shared libs (.so/.dylib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${BUNDLE_DIR}")   # static libs (.a/.lib)

foreach(cfg IN ITEMS Debug Release RelWithDebInfo MinSizeRel)
  string(TOUPPER "${cfg}" cfg_uc)
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${cfg_uc} "${BUNDLE_DIR}")
  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${cfg_uc} "${BUNDLE_DIR}")
  set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${cfg_uc} "${BUNDLE_DIR}")
endforeach()

# ===== copy scripts =====
file(GLOB SCRIPT_FILES "${CMAKE_SOURCE_DIR}/scripts/*")
file(COPY ${SCRIPT_FILES} DESTINATION "${BUNDLE_DIR}/scripts")
endif()

set(CMAKE_CXX_VISIBILITY_PRESET hidden)
set(CMAKE_VISIBILITY_INLINES_HIDDEN YES)


add_subdirectory(src)
if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
  add_subdirectory(example)
endif()






